--- a/router/router.yaml
+++ b/router/router.yaml
@@ -55,5 +55,14 @@ coprocessor:
   router:
     response:
       body: true
+
+preview_persisted_queries:
+  enabled: true
+  safelist: 
+    enabled: true
+    require_id: false
+apq:
+  enabled: false
+      
   
 
